@@ -7,7 +7,6 @@ import org.bukkit.command.Command;
 import org.bukkit.command.CommandSender;
 import org.jetbrains.annotations.NotNull;
 
-import java.util.Collections;
 import java.util.List;
 
 public final class LobbyTimeCommand extends BaseCommand {
@@ -25,18 +24,17 @@ public final class LobbyTimeCommand extends BaseCommand {
         if (!plugin.getConfig().getBoolean("commands.time.enabled", true)) {
             ms.send(sender, plugin.messages().getString(
                     "commands.time.disabled-command",
-                    "<red>The time command is currently disabled.</red>"
+                    "<#FF4D4F>The time command is currently disabled.</#FF4D4F>"
             ));
             return true;
         }
 
         final String perm = plugin.getConfig().getString("commands.time.permission", "syntrix.time");
         if (!sender.hasPermission(perm)) {
-            ms.send(sender, plugin.messages().getString("general.no-permission",
-                    "<red>You do not have permission.</red>"));
+            ms.send(sender, plugin.messages().getString("errors.no-permission",
+                    "<#FF4D4F>You do not have permission to do this.</#FF4D4F>"));
             return true;
         }
-
 
         if (args.length == 2 && args[0].equalsIgnoreCase("set")) {
             long ticks = parseTicks(args[1]);
@@ -47,17 +45,16 @@ public final class LobbyTimeCommand extends BaseCommand {
             World w = resolveWorld();
             if (w != null) {
                 w.setTime(ticks);
-                ms.send(sender, plugin.messages().getString("time.set.ok",
-                        "<green>Time set to <white>%ticks%</white>.</green>").replace("%ticks%", String.valueOf(ticks)));
+                ms.send(sender, plugin.messages().getString("commands.time.set.ok",
+                        "<#2AF598>Time set to <#FFFFFF>{ticks}</#FFFFFF>.</#2AF598>").replace("{ticks}", String.valueOf(ticks)));
             } else {
                 ms.send(sender, plugin.messages().getString(
                         "commands.time.world-missing",
-                        "<red>World not found.</red>"
+                        "<#FF4D4F>World not found.</#FF4D4F>"
                 ));
             }
             return true;
         }
-
 
         if (args.length == 2 && args[0].equalsIgnoreCase("auto")) {
             if (args[1].equalsIgnoreCase("on")) {
@@ -70,27 +67,26 @@ public final class LobbyTimeCommand extends BaseCommand {
                     w.setTime(fixed);
                 }
 
-                plugin.restartTimeControl();
+                plugin.startTimeControl();
 
-                ms.send(sender, plugin.messages().getString("time.auto.enabled",
-                                "<green>Automatic time-lock enabled (fixed=<white>%ticks%</white>).</green>")
-                        .replace("%ticks%", String.valueOf(plugin.getConfig().getLong("timeControl.fixed-time", 1000L))));
+                ms.send(sender, plugin.messages().getString("commands.time.auto.enabled",
+                                "<#2AF598>Automatic time-lock enabled <#8799ae>(fixed=<#FFFFFF>{ticks}</#FFFFFF>).</#8799ae>")
+                        .replace("{ticks}", String.valueOf(plugin.getConfig().getLong("timeControl.fixed-time", 1000L))));
                 return true;
             }
             if (args[1].equalsIgnoreCase("off")) {
                 plugin.getConfig().set("timeControl.enabled", false);
                 plugin.saveConfig();
 
-                plugin.restartTimeControl();
+                plugin.startTimeControl();
 
-                ms.send(sender, plugin.messages().getString("time.auto.disabled",
-                        "<red>Automatic time-lock disabled.</red>"));
+                ms.send(sender, plugin.messages().getString("commands.time.auto.disabled",
+                        "<#FF4D4F>Automatic time-lock disabled.</#FF4D4F>"));
                 return true;
             }
             ms.send(sender, usage());
             return true;
         }
-
 
         if (args.length == 2 && args[0].equalsIgnoreCase("lock")) {
             long ticks = parseTicks(args[1]);
@@ -104,22 +100,21 @@ public final class LobbyTimeCommand extends BaseCommand {
             World w = resolveWorld();
             if (w != null) w.setTime(ticks);
 
-            plugin.restartTimeControl();
+            plugin.startTimeControl();
 
-            ms.send(sender, plugin.messages().getString("time.lock.updated",
-                            "<green>Fixed time updated to <white>%ticks%</white> and task restarted.</green>")
-                    .replace("%ticks%", String.valueOf(ticks)));
+            ms.send(sender, plugin.messages().getString("commands.time.lock.updated",
+                            "<#2AF598>Fixed time updated to <#FFFFFF>{ticks}</#FFFFFF> and task restarted.</#2AF598>")
+                    .replace("{ticks}", String.valueOf(ticks)));
             return true;
         }
-
 
         ms.send(sender, usage());
         return true;
     }
 
     private String usage() {
-        return plugin.messages().getString("time.usage",
-                "<gray>Usage:</gray> <white>/time set <ticks></white> | <white>/time auto on|off</white> | <white>/time lock <ticks></white>");
+        return plugin.messages().getString("commands.time.usage",
+                "<#8799ae>Usage:</#8799ae> <#FFFFFF>/time set <ticks></#FFFFFF> | <#FFFFFF>/time auto on|off</#FFFFFF> | <#FFFFFF>/time lock <ticks></#FFFFFF>");
     }
 
     private World resolveWorld() {
@@ -145,6 +140,21 @@ public final class LobbyTimeCommand extends BaseCommand {
                                                @NotNull Command cmd,
                                                @NotNull String alias,
                                                @NotNull String[] args) {
-        return Collections.emptyList();
+        if (args.length == 1) {
+            return List.of("set", "auto", "lock").stream()
+                    .filter(s -> s.startsWith(args[0].toLowerCase()))
+                    .toList();
+        }
+        if (args.length == 2 && args[0].equalsIgnoreCase("auto")) {
+            return List.of("on", "off").stream()
+                    .filter(s -> s.startsWith(args[1].toLowerCase()))
+                    .toList();
+        }
+        if (args.length == 2 && (args[0].equalsIgnoreCase("set") || args[0].equalsIgnoreCase("lock"))) {
+            return List.of("0", "1000", "6000", "12000", "18000").stream()
+                    .filter(s -> s.startsWith(args[1].toLowerCase()))
+                    .toList();
+        }
+        return List.of();
     }
 }
